# csft5-208-

./: .topmsg  README.md  configure.ac
src/: Makefile.am  indexer.cpp  indextool.cpp  search.cpp  searchd.cpp  sphinx.cpp  sphinx.h  sphinxquery.cpp  sphinxquery.h  sphinxrt.cpp  sphinxsort.cpp  sphinxstd.cpp  sphinxstd.h  sphinxutils.cpp  sphinxutils.h
win/: libsphinx08.vcproj
